--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/FAQ.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/FAQ.html
@@ -19,7 +19,7 @@
   <div class="container">
 
     <div class="row">
-		<div class="col-md-12 mb-2">
+		<div class="col-md-12 mb-5">
 		<h2>What is a Sentiment Analysis?</h2>
 		<hr>
         <p class = "text-justify">Sentiment Analysis is a technique used in text mining. It may, therefore, be described as as text mining technique for analyzing the underlying sentiment of a text message, i.e., a Tweet. Twitter sentiment or opinion expressed through it may be positive, negative or neutral.</p>
@@ -27,15 +27,15 @@
   	</div>
 
      <div class="row">
-		<div class="col-md-12 mb-2">
-		<h2>How do you calculate the Sentiment Score?</h2>
+		<div class="col-md-12 mb-5">
+		<h2>How is the Sentiment Score calculated?</h2>
 		<hr>
         <p class = "text-justify">We use a Python Module called <a href="https://www.geeksforgeeks.org/python-sentiment-analysis-using-vader/">VaderSentiment</a> for the calculation of the Sentiment Score. Before analyzing each Tweet, our programs strips all irrelevant data (Links, special characters, ...) from the text, which could affect the evaluation process. After rating the Tweet, our system performs additional calculations, which can be seen on our Output Page.</p>
 		</div>
   	</div>
 
      <div class="row">
-		<div class="col-md-12 mb-2">
+		<div class="col-md-12 mb-5">
 		<h2>How can I use this website?</h2>
 		<hr>
         <p class = "text-justify">It is fairly simple to use. All you have to do is head over to our <a href="http://127.0.0.1:8000">Homepage</a> and input the Searchterm or Hashtag you would like us to analyse for you. Additionally you can define how many Tweets should be considered.</p>
@@ -43,7 +43,7 @@
   	</div>
 
      <div class="row">
-		<div class="col-md-12 mb-2">
+		<div class="col-md-12 mb-5">
 		<h2>Where does the data come from?</h2>
 		<hr>
         <p class = "text-justify">We use the <a href="https://developer.twitter.com/en/docs/twitter-api">Twitter API</a> to directly access the latest Tweets from Twitter based on your input.</p>
@@ -52,9 +52,9 @@
 
 	<div class="row">
 		<div class="col-md-12 mb-5">
-		<h2>Where can I find the source code for this website?</h2>
+		<h2>Can I use this project or expand it by myself?</h2>
 		<hr>
-		<p class = "text-justify">You can find the source code on this link   <a href="https://github.com/fschadler/ISD">github</a>.</p>
+		<p class = "text-justify">Yes, our whole project is accessible on <a href="https://github.com/fschadler/ISD">Github</a>. You can host it by yourself or edit it to your liking.</p>
 		</div>
   	</div>
 
@@ -62,7 +62,7 @@
 		<div class="col-md-12 mb-5">
 		<h2>Is it possible to get the raw data?</h2>
 		<hr>
-        <p class = "text-justify">Yes, you can download the raw data as Excel file by clicking download button</a>.</p>
+        <p class = "text-justify">We provide the raw data directly on the Analysis Page as an Excel file. Each time you search for a certain Hashtag or Word our system automatically generates a file including the raw data. Feel free to download it and further analyse the Tweets.</p>
 		</div>
   	</div>
 
@@ -70,7 +70,7 @@
 		<div class="col-md-12 mb-5">
 		<h2>Why can't I load more than 500 tweets?</h2>
 		<hr>
-         <p class = "text-justify">You will get a message if you enter more than 500 tweets</a>.</p>
+         <p class = "text-justify">Unfortunately we are limited with our free version of the Twitter API, which only allows for a certain amount of Tweets in a given time period. If you own a premium version of the Twitter API, you can download our project from <a href="https://github.com/fschadler/ISD">Github</a> and adjust the maximum amount of allowed Tweets in forms.py within the TwitterDataCollector App.</p>
 		</div>
   	</div>
 
