--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -8,8 +8,8 @@
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
           <h1 class="display-4 text-white mt-5 mb-2">Welcome to Tweesent</h1>
-			<p class="lead mb-0 text-white-50">Tweesent is an easy and fast sentiment analyser to investigate real-time Tweets on Twitter.</p>
-			<p class="lead mb-5 text-white-50"> Just enter the required data below and start analysing whichever Tweets you like!</p>
+			<p class="lead mb-0 text-white">Tweesent is an easy and fast sentiment analyser to investigate real-time Tweets on Twitter.</p>
+			<p class="lead mb-5 text-white"> Just enter the required data below and start analysing whichever Tweets you like!</p>
 				<div class="col-md-12">
 					<div class ="form-group ">
 						<form action="analysis" method="post">
@@ -91,6 +91,7 @@
 			<p class="text-justify"> All used Tweets are real-time data by people that are just talking about whatever topic you would like to have a look at. </p>
         	<p class="text-justify">The maximum of Tweets that can be pulled is set to 500. This is due to the reason that the Twitter API only allows for a certain amount of Tweets to be pulled in a given period.</p>
 			<p class="text-justify">If you want to know more about Tweesent visit our <a href="http://127.0.0.1:8000/FAQ">FAQ Page</a> or <a href="http://127.0.0.1:8000/FAQ">contact us</a>.</p>
+			<p class="text-justify">Would you like to use this project for your own or expand it? Visit our <a href="https://github.com/fschadler/ISD">Github page</a>.</p>
 		</div>
   	  </div>
       <div class="col-md-7">
